--- a/about/index.html
+++ b/about/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test_9/10/2024</title>
+    <title>Document</title>
 </head>
 <body>
-    I forgot how to code... <br>
-    wow it changes
-    <a href="about/">my about page</a>
+    this is part of the about page
 </body>
 </html>
